[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-random-deck"
version = "1.0.0"
description = "A tool to scrape and randomly select MTG Commander decks from Moxfield"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
mtg-random-deck = "main:main"
